# galaxy

./: .gitignore  .gitmodules  CMakeLists.txt  Main.cpp
Models/: CMakeLists.txt
Models/Geometry/: CMakeLists.txt  Rect.cpp  Rect.h  Vector2.cpp  Vector2.h
UI/: CMakeLists.txt  FrameData.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h
UI/Events/: CMakeLists.txt  DebugEventResponse.cpp  DebugEventResponse.h  IEventResponse.h  KeyEvent.h
UI/Structures/: FrameData.h  Rect.h
UI/Text/: CMakeLists.txt  FontCache.cpp  FontCache.h
